--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "allure-generate": "allure generate",
     "start": "node app.js",
     "test": "node spec/support/runner.js && npm run allure-generate",
-    "ci:test": "node spec/support/runner.js && npm run allure-generate",
+    "ci:test": "node spec/support/runner.js && npm run allure-generate"
   },
   "author": "",
   "license": "ISC",
