--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "allure-generate": "allure generate",
     "start": "node app.js",
-    "test": "node spec/support/runner.js && npm run allure-generate",
-    "ci:test": "node spec/support/runner.js && npm run allure-generate"
+    "test": "node spec/support/runner.js",
+    "ci:test": "npm test"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "allure-commandline": "^2.3.5",
     "jasmine": "^2.8.0"
   },
   "dependencies": {
